[gd_scene load_steps=33 format=3 uid="uid://bdvom4xt10d85"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_1y0mn"]
[ext_resource type="Resource" uid="uid://bhfyamkk0t00" path="res://ressources/projectile/bullet/basic_bullet_ressource.tres" id="2_nug7i"]
[ext_resource type="PackedScene" uid="uid://dbsgbvl1bns4r" path="res://scenes/Dash.tscn" id="2_ot6dk"]
[ext_resource type="Texture2D" uid="uid://fasb5ewyxwae" path="res://assets/player/player-stand/player-stand-1.png" id="3_isvt8"]
[ext_resource type="Texture2D" uid="uid://b3vvhil31q4x2" path="res://assets/player/player-run/player-run-1.png" id="4_ghwl8"]
[ext_resource type="Texture2D" uid="uid://clxw4a78dg05v" path="res://assets/player/player-stand/player-stand-2.png" id="4_i60cp"]
[ext_resource type="Texture2D" uid="uid://cfosglswcx42u" path="res://assets/player/player-run/player-run-2.png" id="5_d7slr"]
[ext_resource type="Texture2D" uid="uid://e6eg5yne4de0" path="res://assets/player/player-stand/player-stand-3.png" id="5_wbxnl"]
[ext_resource type="Texture2D" uid="uid://c7f8eeyaf3vqc" path="res://assets/player/player-stand/player-stand-4.png" id="6_2f80w"]
[ext_resource type="Texture2D" uid="uid://ddsny6r41hm3u" path="res://assets/player/player-run/player-run-3.png" id="6_apenb"]
[ext_resource type="Texture2D" uid="uid://cutakbb52vtr7" path="res://assets/player/player-run/player-run-4.png" id="7_c8b1r"]
[ext_resource type="Texture2D" uid="uid://xx2oyd7ai3uo" path="res://assets/player/player-run/player-run-5.png" id="8_yde6i"]
[ext_resource type="Texture2D" uid="uid://81mju2kns45n" path="res://assets/player/player-run/player-run-6.png" id="9_5lrf6"]
[ext_resource type="Texture2D" uid="uid://by1b6rg0gkvsf" path="res://assets/player/player-run/player-run-7.png" id="10_n0brr"]
[ext_resource type="Texture2D" uid="uid://ddvcpub6o7cpp" path="res://assets/player/player-run/player-run-8.png" id="11_7whh8"]
[ext_resource type="Texture2D" uid="uid://c4jqbrlsqaa52" path="res://assets/player/player-run/player-run-9.png" id="12_gw6bt"]
[ext_resource type="Texture2D" uid="uid://cpj3fg5s54ei8" path="res://assets/player/player-run/player-run-10.png" id="13_ac5ty"]
[ext_resource type="Texture2D" uid="uid://bxxd4lw3052sa" path="res://assets/player/player-run-shot/player-run-shot-1.png" id="17_a5tl3"]
[ext_resource type="Texture2D" uid="uid://61h7odwkgw68" path="res://assets/player/player-run-shot/player-run-shot-2.png" id="18_t6gwj"]
[ext_resource type="Texture2D" uid="uid://cy5pj51557xsp" path="res://assets/player/player-run-shot/player-run-shot-3.png" id="19_wod1k"]
[ext_resource type="Texture2D" uid="uid://c38tj26jg0squ" path="res://assets/player/player-run-shot/player-run-shot-4.png" id="20_chpxx"]
[ext_resource type="Texture2D" uid="uid://cqxyljyfci2ge" path="res://assets/player/player-run-shot/player-run-shot-5.png" id="21_obgxt"]
[ext_resource type="Texture2D" uid="uid://bsmdgegkdybes" path="res://assets/player/player-run-shot/player-run-shot-6.png" id="22_s6mfg"]
[ext_resource type="Texture2D" uid="uid://boymwva2mqq7n" path="res://assets/player/player-run-shot/player-run-shot-7.png" id="23_sj54h"]
[ext_resource type="Texture2D" uid="uid://chlk7a6d6ujp7" path="res://assets/player/player-run-shot/player-run-shot-8.png" id="24_0mqcs"]
[ext_resource type="Texture2D" uid="uid://bmj8c6diceiev" path="res://assets/player/player-run-shot/player-run-shot-9.png" id="25_crjx7"]
[ext_resource type="Texture2D" uid="uid://bntgnla73ca23" path="res://assets/player/player-run-shot/player-run-shot-10.png" id="26_v7ypt"]
[ext_resource type="Texture2D" uid="uid://cbxrmil73fvwr" path="res://assets/player/player shooting/01.png" id="28_texf1"]
[ext_resource type="Texture2D" uid="uid://161ycw5hqkcu" path="res://assets/player/player shooting/02.png" id="29_bq86x"]
[ext_resource type="Texture2D" uid="uid://vyfwb4qcir5l" path="res://assets/player/player shooting/03.png" id="30_jfb0j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tcrr4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_n0brr")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_isvt8")
}, {
"duration": 1.0,
"texture": ExtResource("4_i60cp")
}, {
"duration": 1.0,
"texture": ExtResource("5_wbxnl")
}, {
"duration": 1.0,
"texture": ExtResource("6_2f80w")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ghwl8")
}, {
"duration": 1.0,
"texture": ExtResource("5_d7slr")
}, {
"duration": 1.0,
"texture": ExtResource("6_apenb")
}, {
"duration": 1.0,
"texture": ExtResource("7_c8b1r")
}, {
"duration": 1.0,
"texture": ExtResource("8_yde6i")
}, {
"duration": 1.0,
"texture": ExtResource("9_5lrf6")
}, {
"duration": 1.0,
"texture": ExtResource("10_n0brr")
}, {
"duration": 1.0,
"texture": ExtResource("11_7whh8")
}, {
"duration": 1.0,
"texture": ExtResource("12_gw6bt")
}, {
"duration": 1.0,
"texture": ExtResource("13_ac5ty")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_a5tl3")
}, {
"duration": 1.0,
"texture": ExtResource("18_t6gwj")
}, {
"duration": 1.0,
"texture": ExtResource("19_wod1k")
}, {
"duration": 1.0,
"texture": ExtResource("20_chpxx")
}, {
"duration": 1.0,
"texture": ExtResource("21_obgxt")
}, {
"duration": 1.0,
"texture": ExtResource("22_s6mfg")
}, {
"duration": 1.0,
"texture": ExtResource("23_sj54h")
}, {
"duration": 1.0,
"texture": ExtResource("24_0mqcs")
}, {
"duration": 1.0,
"texture": ExtResource("25_crjx7")
}, {
"duration": 1.0,
"texture": ExtResource("26_v7ypt")
}],
"loop": true,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_texf1")
}, {
"duration": 1.0,
"texture": ExtResource("29_bq86x")
}, {
"duration": 1.0,
"texture": ExtResource("30_jfb0j")
}],
"loop": true,
"name": &"snipe",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eb35x"]
size = Vector2(21.6, 21.8)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_mask = 12
script = ExtResource("1_1y0mn")
projectile_ressource = ExtResource("2_nug7i")

[node name="Dash" parent="." instance=ExtResource("2_ot6dk")]

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_tcrr4")
animation = &"dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 3.25)
shape = SubResource("RectangleShape2D_eb35x")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="UltimeTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_shooting_timeout"]
[connection signal="timeout" from="UltimeTimer" to="." method="_on_ultime_timer_timeout"]
